fixed setting target to next goal